[project]
name = "mockserver-client"
version = "5.16.0"
description = "Official Python client for MockServer — create expectations, verify requests, and register dynamic callbacks via WebSocket"
authors = [
  {name = "James Bloom", email = "jamesdbloom@gmail.com"},
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["MockServer", "HTTP Mock", "Proxy", "Testing", "API", "WebSocket", "Callback", "MCP", "AI"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
  "websockets >= 12.0",
]

[project.optional-dependencies]
dev = [
  "pytest >= 8.4.2",
  "pytest-asyncio >= 1.2.0",
  "pytest-cov >= 4.0",
]

[project.urls]
Homepage = "https://www.mock-server.com"
Repository = "https://github.com/mock-server/mockserver-monorepo"
Documentation = "https://www.mock-server.com/mock_server/getting_started.html"
Changelog = "https://www.mock-server.com/mock_server/changelog.html"
"Bug Tracker" = "https://github.com/mock-server/mockserver-monorepo/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running MockServer (started via Docker)",
]
